# ska-low-mccs-daq

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  .release  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  Dockerfile  MANIFEST.skao.int  Makefile  README.md  aavs_system-1.1-py3-none-any.whl  cdaq_requirements.pip  deploy.sh  k8s-test-runner.yaml  mypy.ini  pyproject.toml  sonar-project.properties  test_aavs.cpp
aavs-daq/src/: CMakeLists.txt  DAQ.cpp  DAQ.h  NetworkReceiver.cpp  NetworkReceiver.h  RealTimeThread.h  RingBuffer.cpp  RingBuffer.h  Utils.h  receiver.cpp
src/: AntennaBuffer.cpp  AntennaBuffer.h  BeamformedData.cpp  BeamformedData.h  CMakeLists.txt  ChannelisedData.cpp  ChannelisedData.h  CorrelatorData.cpp  CorrelatorData.h  DoubleBuffer.cpp  DoubleBuffer.h  RawData.cpp  RawData.h  SPEAD.h  StationData.cpp  StationData.h  StationDataRaw.cpp  StationDataRaw.h  acquire_station_beam.cpp  test_aavs.cpp
src/aavs_subrack/: tile_1_6.py  tpm_test_firmware.py
src/pyaavs/: calibrate_station.py  slack.py  tile.py  tile_1_6.py  tpm_control.py
src/pyaavs/plugins/: __init__.py
src/pyaavs/plugins/tpm/: tpm_test_firmware.py
src/pyaavs/tests/: config_manager.py  print_data.py  spead_beam_power_offline.py  spead_beam_power_realtime.py  spead_csp.py  test_channelizer.py  test_eth40g.py  test_f2f.py  test_full_station.py  test_functions.py  test_pfb.py  test_requirements.py  test_station_beam.py  test_wrapper.py
src/pydaq/: daq_plotter.py  daq_receiver.py  daq_receiver_interface.py
src/pydaq/persisters/: aavs_file.py  channel.py  corr.py  raw.py  stationbeam.py
src/pydaq/plotters/: beam_data.py  channel_data.py  raw_data.py  utils.py
src/ska_low_mccs_daq/: CMakePresets.json  __init__.py  daq_handler.py  version.py
src/ska_low_mccs_daq/aavs_system/: deploy.sh
src/ska_low_mccs_daq/aavs_system/python/pyaavs/: channels_sweep.py  station.py  tile.py  tile_health_monitor.py  tpm_control.py  tpm_monitoring_point_lookup.py
src/ska_low_mccs_daq/aavs_system/python/pyaavs/tests/: config_manager.py  pfb_response_filt_27_1024_16.txt  spead_beam_power_offline.py  test_ddr.py  test_synchronisation.py
src/ska_low_mccs_daq/aavs_system/python/pyaavs/tests/doc/: TPM_Hardware_test_user_manual.docx
src/ska_low_mccs_daq/aavs_system/python/pyaavs/tests/test_old/: test_start_ring_bf.py
src/ska_low_mccs_daq/aavs_system/python/pydaq/: daq_receiver.py  daq_receiver_interface.py
src/ska_low_mccs_daq/aavs_system/python/pydaq/persisters/: __init__.py  aavs_file.py  channel.py  utils.py
src/ska_low_mccs_daq/aavs_system/python/pydaq/plotters/: __init__.py  beam_data.py  channel_data.py  correlated_data.py
src/ska_low_mccs_daq/aavs_system/python/ral_scripts/: oxford_subrack_power_control.py
src/ska_low_mccs_daq/aavs_system/python/utilities/emc/: emc_plot.py
src/ska_low_mccs_daq/aavs_system/python/utilities/monitoring/: bandpass.service
src/ska_low_mccs_daq/aavs_system/python/utilities/skalab/: shelly.sh
src/ska_low_mccs_daq/aavs_system/python/utilities/skalab/Gui/: skalab_live.ui  skalab_main.ui  skalab_monitor.ui  skalab_playback.ui  skalab_profile.ui
src/ska_low_mccs_daq/aavs_system/python/utilities/station_setup/: uk_phase0.py
src/ska_low_mccs_daq/aavs_system/src/: CMakeLists.txt  ChannelisedData.cpp  CorrelatorData.cpp  acquire_station_beam.h
src/ska_low_mccs_daq/cdaq/: AntennaBuffer.cpp  AntennaBuffer.h  BeamformedData.cpp  BeamformedData.h  CMakeLists.txt  ChannelisedData.cpp  ChannelisedData.h  CorrelatorData.cpp  CorrelatorData.h  DoubleBuffer.cpp  DoubleBuffer.h  RawData.cpp  RawData.h  SPEAD.h  StationData.cpp  StationData.h  StationDataRaw.cpp  StationDataRaw.h  TccDoubleBuffer.cpp  TccDoubleBuffer.h  TccSplitRing.cpp  TccSplitRing.h  TensorCorrelatorData.cpp  TensorCorrelatorData.h  acquire_station_beam.cpp  acquire_station_beam.h  build_with_channeliser.sh  multi_array.h  test_aavs.cpp  test_tcc_correlator.cpp
src/ska_low_mccs_daq/cuda/: test_cuda.py
src/ska_low_mccs_daq/daq_receiver/: __init__.py  daq_component_manager.py  daq_health_model.py  daq_receiver_device.py  daq_simulator.py  tpm_pcap_replay.py
src/ska_low_mccs_daq/daq_receiver/replay_data/: channel_integ_96_192.pcap
src/ska_low_mccs_daq/gRPC_server/: __init__.py  daq_grpc_server.py
src/ska_low_mccs_daq/gRPC_server/generated_code/: __init__.py  daq_pb2.py  daq_pb2.pyi  daq_pb2_grpc.py
src/ska_low_mccs_daq/gRPC_server/protos/: daq.proto
src/ska_low_mccs_daq/interface/: __init__.py  client.py  server.py
src/ska_low_mccs_daq/interface/generated_code/: daq_pb2.py  daq_pb2_grpc.py
src/ska_low_mccs_daq/interface/protos/: daq.proto
src/ska_low_mccs_daq/pydaq/: daq_plotter.py  daq_receiver.py  daq_receiver_interface.py  interface.py
src/ska_low_mccs_daq/pydaq/persisters/: aavs_file.py  beam.py  channel.py  corr.py  definitions.py  raw.py  stationbeam.py  utils.py
src/ska_low_mccs_daq/pydaq/plotters/: __init__.py  beam_data.py  channel_data.py  raw_data.py  station_data.py  utils.py
src/ska_low_mccs_daq/pydaq/utils/: __init__.py  pcap_replayer.py
src/ska_low_mccs_daq/schemas/daq/: MccsDaq_Configure.json
src/ska_low_mccs_daq/scripts/: skb_490.py
tests/cpp/: CMakeLists.txt  DAQ.h  spead_test_util.h  test_antenna_buffer.cpp  test_antenna_buffer_consumer.cpp  test_beamformed_data.cpp  test_beamformed_data_consumer.cpp  test_channelised_data.cpp  test_channelised_data_consumer.cpp  test_daq.cpp  test_double_buffer.cpp  test_integrated_channel.cpp  test_raw_data.cpp  test_raw_data_consumer.cpp  test_ring_buffer.cpp  test_station_data.cpp  test_station_data_consumer.cpp  test_station_data_raw.cpp  test_station_data_raw_consumer.cpp  test_tcc_double_buffer.cpp  test_tcc_split_ring.cpp  test_tensor_correlator.cpp
tests/cpp/cmake/: EnsureCuda.cmake  FetchAavsDaq.cmake  FetchGTest.cmake  FetchTensorCorrelator.cmake  PatchRealTimeThread.cmake
tests/cpp/cpu_tests/: CMakeLists.txt
tests/cpp/cudawrappers/: cu.hpp  nvrtc.hpp
tests/cpp/gpu_tests/: CMakeLists.txt  test_tensor_correlator.cpp
tests/cpp/stubs/cudawrappers/: cu.hpp
(+411 files in other folders)
