[tool.poetry]
name = "ska-low-mccs-daq"
version = "0.3.0"
description = "Data acquisition for the SKA-Low Monitoring, Control and Calibration Subsystem (MCCS)"
license = "BSD-3-Clause"
authors = ["MCCS team"]
readme = "README.md"
documentation = "https://developer.skatelescope.org/projects/ska-low-mccs-daq"

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
# When updating this dependency, also update AAVS_SYSTEM_REF in the Dockerfile
aavs_system = { git = "https://gitlab.com/ska-telescope/aavs-system.git", rev = "498662646fcbb50c4995a1246f207852e2430006", subdirectory = "python" }
python = "~3.10"
future = "^0.18.2"
numpy = "^1.23.0"
PyYAML = "^6.0"
ska-control-model = "0.3.1"
# ska-low-mccs-daq-interface = "^0.1.0"
ska-low-mccs-daq-interface = { git = https://gitlab.com/ska-telescope/mccs/ska-low-mccs-daq-interface.git, branch="mccs-1631" }
singleton-decorator = "1.0.0"
slacker = "0.14.0"
h5py = "3.7.0"
lockfile = "0.12.2"
matplotlib = "3.5.3"
watchdog = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pylint = "^2.15.3"
pylint-junit = "^0.3.2"
pytest = "^7.3.2"
pytest-bdd = "^6.1.1"
pytest-cov = "^4.1.0"
pytest-json-report = "^1.5.0"
pytest-mock = "^3.11.1"
pytest-repeat = "^0.9.1"
pytest-timeout = "^2.1.0"
pytest-xdist = "^2.5.0"
coverage = "^6.4.2"
black = "^22.6.0"
darglint = "^1.8.1"
flake8 = "^5.0.1"
flake8-formatter-junit-xml = "^0.0.6"
flake8-builtins = "^1.5.3"
flake8-docstrings = "^1.6.0"
flake8-use-fstring = "^1.4"
flake8-rst-docstrings = "^0.2.7"
mypy = "^1.3.0"
pep8-naming = "^0.13.1"
types-pkg-resources = "^0.1.3"
types-PyYAML = "^6.0.11"
isort = "^5.10.1"

[tool.poetry.group.docs.dependencies]
Sphinx = "^6.2.1"
PyYAML = "^6.0"
sphinx-autodoc-typehints = "^1.19"
ska-ser-sphinx-theme = "^0.1.1"
sphinxcontrib-plantuml = "^0.25"
ska-control-model = "^0.3.1"
ska-low-mccs-daq-interface = "^0.1.0"

[tool.poetry.scripts]
MccsDaqServer = "ska_low_mccs_daq.daq_handler:main"

[tool.pytest.ini_options]
testpaths = "tests/"
addopts = "--json-report --json-report-file=build/reports/report.json --cov-report html:build/htmlcov --cov-report xml:build/reports/code-coverage.xml --cov-report term:skip-covered --cov=ska_low_mccs_daq --junitxml=build/reports/unit-tests.xml --verbose"
console_output_style = "progress"
junit_family = "legacy"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
data_file = ".coverage/.coverage"
branch = true
source = ["ska_low_mccs_daq"]

[tool.coverage.report]
show_missing = false

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
