[project]
name = "ska-low-mccs-daq"
version = "5.3.2"
description = "Data acquisition for the SKA-Low Monitoring, Control and Calibration Subsystem (MCCS)"
license = "BSD-3-Clause"
authors = [{name = "MCCS team"}]
readme = "README.md"
documentation = "https://developer.skatelescope.org/projects/ska-low-mccs-daq"
requires-python = ">=3.10, <3.11"

[[tool.uv.index]]
name = "ska-nexus"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[[tool.uv.index]]
name = "PyPI-public"
url = "https://pypi.org/simple"

[tool.uv]
default-groups = ["dependencies"]

[dependency-groups]
dependencies = [
    "pytango >= 10.0.0, <10.1.0",
    "ska-tango-base == 1.3.2",
    "ska-low-mccs-common == 4.4.1",
    "ska-ser-skuid >= 3.3.3, <3.4.0",
    "numpy >= 1.23.0",
    "PyYAML >= 6.0, < 7.0",
    "ska-control-model >= 1.0.0, <2.0.0",
    "singleton-decorator == 1.0.0",
    "h5py >= 3.12.1, <4.0.0",
    "lockfile == 0.12.2",
    "matplotlib >= 3.9.2, <4.0.0",
    "watchdog >= 3.0.0, < 4.0.0",
    "GitPython >= 3.1.44, <4.0.0",
    "kubernetes >= 33.0.0, <34.0.0",
]
dev = [
    "pre-commit >= 2.20.0, <3.0.0",
    "pylint >= 2.17.0, <3.0.0",
    "pylint-junit >= 0.3.2, <1.0.0",
    "pytest >= 7.3.2, <8.0.0",
    "pytest-bdd >= 6.1.1, <7.0.0",
    "pytest-cov >= 4.1.0, <5.0.0",
    "pytest-json-report >= 1.5.0, <2.0.0",
    "pytest-mock >= 3.11.1, <4.0.0",
    "pytest-repeat >= 0.9.1, <1.0.0",
    "pytest-timeout >= 2.1.0, <3.0.0",
    "pytest-xdist >= 2.5.0, <3.0.0",
    "coverage >= 6.4.2, <7.0.0",
    "black >= 22.6.0, <23.0.0",
    "darglint >= 1.8.1, <2.0.0",
    "flake8 >= 5.0.1, <6.0.0",
    "flake8-formatter-junit-xml >= 0.0.6, <1.0.0",
    "flake8-builtins >= 1.5.3, <2.0.0",
    "flake8-docstrings >= 1.6.0, <2.0.0",
    "flake8-use-fstring >= 1.4, <2.0.0",
    "flake8-rst-docstrings >= 0.2.7, <1.0.0",
    "flake8-pyproject >= 1.0.0, <2.0.0",
    "mypy >= 1.3.0, <2.0.0",
    "pep8-naming >= 0.13.1, <1.0.0",
    "types-PyYAML >= 6.0.11, <7.0.0",
    "isort >= 5.10.1, <6.0.0"
]

docs = [
    "sphinx >= 8.1.0, <9.0.0",
    "PyYAML >= 6.0, <7.0",
    "sphinx-autodoc-typehints >= 2.0.0, <3.0.0",
    "ska-ser-sphinx-theme >= 0.1.1, <1.0.0",
    "ska-ser-skuid >= 3.3.3, <4.0.0",
    "ska-tango-base == 1.3.2",
    "ska-low-mccs-common == 4.4.1",
    "pytango >= 10.0.0, <10.1.0",
    "sphinxcontrib-plantuml >= 0.25, <1.0.0",
    "ska-control-model >= 1.0.0, <2.0.0",
    "numpy >= 1.23.0",
    "matplotlib >= 3.9.2, <4.0.0",
    "h5py >= 3.12.1, <4.0.0",
    "lockfile == 0.12.2",
    "watchdog >= 3.0.0, <4.0.0",
    "GitPython >= 3.1.44, <4.0.0",
    "kubernetes >= 33.0.0, <34.0.0",
]

[project.scripts]
daq = "ska_low_mccs_daq:main"
MccsDaqServer = "ska_low_mccs_daq.daq_handler:main"
MccsDaqReceiver = "ska_low_mccs_daq.daq_receiver.daq_receiver_device:main"

[tool.pytest.ini_options]
testpaths = "tests/"
addopts = "--forked -n 16 --json-report --json-report-file=build/reports/report.json --cov-report html:build/htmlcov --cov-report xml:build/reports/code-coverage.xml --cov-report term:skip-covered --cov=ska_low_mccs_daq --junitxml=build/reports/unit-tests.xml --verbose"
console_output_style = "progress"
junit_family = "legacy"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
data_file = ".coverage/.coverage"
omit = ["src/ska_low_mccs_daq/cdaq/*", "src/ska_low_mccs_daq/pydaq/*"]
branch = true
source = ["ska_low_mccs_daq"]

[tool.coverage.report]
show_missing = false

[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"
